--- a/app/less/main.less
+++ b/app/less/main.less
@@ -11,6 +11,10 @@
   }
 }
 
+form:not([novalidate]) .ng-dirty.ng-invalid:not(.ng-empty) {
+	.has-error .form-control;
+}
+
 .feeds-list {
 	.feeds-list-item {
 		img {
